Add Mongo Dependency

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 spring:
   application:
     name: PersonalBlog
+  data:
+    mongodb:
+      uri:
+      database: BlogData
 
 server:
   port: 20001
