--- a/front/package.json
+++ b/front/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "development" : "vue-cli-service build --mode development"
+    "uat" : "vue-cli-service build --mode uat"
   },
   "dependencies": {
     "axios": "^0.19.0",
