--- a/front/package.json
+++ b/front/package.json
@@ -6,11 +6,12 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "uat" : "vue-cli-service build --mode uat"
+    "uat": "vue-cli-service build --mode uat"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
+    "element-ui": "^2.13.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
@@ -33,7 +34,7 @@
       "eslint:recommended"
     ],
     "rules": {
-      "no-console":"off"
+      "no-console": "off"
     },
     "parserOptions": {
       "parser": "babel-eslint"
